Ajout de la méthode ensureScorersInTeams() pour vérifier et ajouter automatiquement les joueurs ayant marqué des buts dans leurs équipes respectives. Modification de la méthode closeScoreModal() pour intégrer cette vérification lors de la fermeture de la modale de score.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -431,7 +431,7 @@
     
     <div class="score-modal-content">
       
-      <button class="close-button" (click)="showScoreForm = false" 
+      <button class="close-button" (click)="closeScoreModal()" 
       style="position: absolute; right: 0; top: O; transform: translateY(-45%);">×</button>
       
       
