Updated competition filter logic in the template to show/hide match-related buttons based on the selected competition filter. The visibility of the "Match" label and the button for adding matches now depends on whether a valid competition is selected.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,7 +20,7 @@
             class="btn btn-primary mt-2" 
             (click)="showMatchForm = true">
       <i class="fas fa-plus-circle text-white"></i>
-       <span [hidden]="selectedCompetitionFilter"> Match</span>
+       <span [hidden]="!selectedCompetitionFilter.includes('-')"> Match</span>
     </button>
 
     <button *ngIf="!showMatchForm && !showTeamFilterModal && !showCompetitionFilterModal" 
@@ -51,7 +51,7 @@
     </button>
 
     <button 
-    *ngIf="!showCompetitionFilterModal && !showTeamFilterModal && !showMatchForm"
+    *ngIf="!showCompetitionFilterModal && !showTeamFilterModal && !showMatchForm && !selectedCompetitionFilter.includes('-')"
     class="btn btn-outline-info mt-2" 
     [ngClass]="selectedCompetitionFilter ? getCompetitionBadgeColor(selectedCompetitionFilter) : 'btn-info'"
             [hidden]="!selectedCompetitionFilter"
