Modales des compétiiton

--- a/src/app/modals/competition-filter-modal/competition-filter-modal.component.html
+++ b/src/app/modals/competition-filter-modal/competition-filter-modal.component.html
@@ -3,7 +3,7 @@
   <div class="modal-header">
     <h5 class="modal-title">
       <i class="fas fa-trophy me-2"></i>
-      Gestion des Compétitions
+      Compétitions
     </h5>
     <button type="button" class="close-button" (click)="close()" aria-label="Fermer">
       <span aria-hidden="true">&times;</span>
@@ -212,7 +212,7 @@
       <div class="add-competition-section mt-4">
         <button type="button" class="btn btn-success w-100" (click)="openAddForm()" *ngIf="!showAddForm && !showEditForm">
           <i class="fas fa-plus me-2"></i>
-          Ajouter une nouvelle compétition
+          Nouvelle compétition
         </button>
       </div>
     </div>
